--- a/templates/partner/partner_maker.html.twig
+++ b/templates/partner/partner_maker.html.twig
@@ -52,4 +52,9 @@
     {{ form_rest(partnerCreationForm) }}
 
     {{ form_end(partnerCreationForm) }}
+
+    {#---------return boutons-------------#}
+    {{ include('partial/_return_to_annuaire.html.twig') }}
+    {#-----------------------------#}
+
 {% endblock %}
