--- a/templates/service/liste_service.html.twig
+++ b/templates/service/liste_service.html.twig
@@ -54,6 +54,10 @@
         </div>
     </div>
 
+    {#---------return boutons-------------#}
+    {{ include('partial/_return_to_annuaire.html.twig') }}
+    {#-----------------------------#}
+
     {{ include('partial/_deleteConfirmModal.html.twig') }}
 
 {% endblock %}
