--- a/templates/service/service_update.html.twig
+++ b/templates/service/service_update.html.twig
@@ -24,4 +24,9 @@
     {{ form_rest(serviceUpdateForm) }}
 
     {{ form_end(serviceUpdateForm) }}
+
+    {#---------return boutons-------------#}
+    {{ include('partial/_return_to_annuaire.html.twig') }}
+    {#-----------------------------#}
+
 {% endblock %}
