--- a/public/css/style.css
+++ b/public/css/style.css
@@ -76,7 +76,8 @@ h1{
 
 /*START btn submit myself*/
 /*Replace with neon effect button, to see if usefull for other button*/
-.btn-submit{
+.btn-submit,
+.my-btn{
     /*width: 80%;*/
     width: fit-content;
     color: #52006A;
@@ -85,7 +86,8 @@ h1{
     border-radius: 3px;
 }
 
-.btn-submit:hover{
+.btn-submit:hover,
+.my-btn:hover{
     color: #CD113B;
     /*border-color: #52006A;*/
     border-color: rgb(205, 17, 59);
