--- a/templates/partial/_menuCommun.html.twig
+++ b/templates/partial/_menuCommun.html.twig
@@ -23,8 +23,8 @@
             </h2>
             <div id="collapseOne" class="accordion-collapse collapse " aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                    <a href=" {{ path('app_partner_creation') }} ">Créer un nouveau partenaire avec un nouvel utilisateur</a><br>
-                    <a href="#">Créer un nouveau partenaire avec un utilisateur existant</a><br>
+                    <a href="#">Créer un nouveau partenaire avec un nouvel utilisateur</a><br>
+                    <a href="{{ path('app_partner_creation') }}">Créer un nouveau partenaire avec un utilisateur existant</a><br>
 
                 </div>
             </div>
@@ -37,8 +37,8 @@
             </h2>
             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                    <a href=" {{ path('app_structure_creation_partner_selection') }} ">Créer une nouvelle structure avec un nouvel utilisateur</a><br>
-                    <a href="#">Créer une nouvelle structure avec un utilisateur existant</a><br>
+                    <a href="#">Créer une nouvelle structure avec un nouvel utilisateur</a><br>
+                    <a href="{{ path('app_structure_creation_partner_selection') }}">Créer une nouvelle structure avec un utilisateur existant</a><br>
                 </div>
             </div>
         </div>
