creation of partner/structure tunnel to create user in the same time

--- a/templates/partial/_menuCommun.html.twig
+++ b/templates/partial/_menuCommun.html.twig
@@ -23,7 +23,7 @@
             </h2>
             <div id="collapseOne" class="accordion-collapse collapse " aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                    <a href="#">Créer un nouveau partenaire avec un nouvel utilisateur</a><br>
+                    <a href="{{ path('app_register_plus_partner') }}">Créer un nouveau partenaire avec un nouvel utilisateur</a><br>
                     <a href="{{ path('app_partner_creation') }}">Créer un nouveau partenaire avec un utilisateur existant</a><br>
 
                 </div>
@@ -37,7 +37,7 @@
             </h2>
             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                    <a href="#">Créer une nouvelle structure avec un nouvel utilisateur</a><br>
+                    <a href="{{ path('app_register_plus_structure') }}">Créer une nouvelle structure avec un nouvel utilisateur</a><br>
                     <a href="{{ path('app_structure_creation_partner_selection') }}">Créer une nouvelle structure avec un utilisateur existant</a><br>
                 </div>
             </div>
