--- a/templates/service/service_maker.html.twig
+++ b/templates/service/service_maker.html.twig
@@ -41,4 +41,9 @@
     {{ form_rest(serviceCreationForm) }}
 
     {{ form_end(serviceCreationForm) }}
+
+    {#---------return boutons-------------#}
+    {{ include('partial/_return_to_annuaire.html.twig') }}
+    {#-----------------------------#}
+
 {% endblock %}
