--- a/templates/structure/structure_maker_partner_selection_with_user.html.twig
+++ b/templates/structure/structure_maker_partner_selection_with_user.html.twig
@@ -33,7 +33,7 @@
                         <tr>
                             <th scope="row">{{ partner.name }}</th>
                             <td>
-                                <a href="{{path('app_structure_creation_structure_data', {'id': partner.id })}}" class="btn btn-secondary m-md-2"><i class="bi bi-check2-square"></i></a>
+                                <a href="{{path('app_structure_creation_structure_data_with_user', {'id_partner': partner.id, 'id_user' : user.id})}}" class="btn btn-secondary m-md-2"><i class="bi bi-check2-square"></i></a>
                             </td>
                             <td>{{ partner.description }}</td>
                             <td>
