fixed responsive bug / deploy delete confirmation modal / fixed connected as position and change text according to screen device

--- a/templates/partial/_header.html.twig
+++ b/templates/partial/_header.html.twig
@@ -1,4 +1,4 @@
-<nav class="navbar bg-pink sticky-top">
+<nav class="navbar bg-pink header-top sticky-top">
     <div class="row container-fluid text-center">
 
         <div class="col col-md-3 col-xl-2 text-center">
