--- a/templates/service/liste_service.html.twig
+++ b/templates/service/liste_service.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-    <div class=" row ">
+    {{ include('partial/_responsiveFirstRow.html.twig') }}
         {# menuCommun is the left col in display #}
         {{ include('partial/_menuCommun.html.twig') }}
 
