--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,6 +20,7 @@
 body{
     font-family: 'Fredoka', sans-serif;
     /*font-family: 'Fredoka One', cursive;*/
+
 }
 
 h1{
@@ -27,14 +28,26 @@ h1{
 }
 
 .bg-pink{
-    /*background-color: rgba(205,17,59,0.5);*/
     background: rgb(205,17,59);
     background: linear-gradient(to bottom, rgba(205,17,59,0.7931547619047619) 14%, rgba(255,255,255,1) 78%);
 }
 .bg-pink-reverse{
-    /*background-color: rgba(205,17,59,0.5);*/
     background: rgb(205,17,59);
     background: linear-gradient(to top, rgba(205,17,59,0.7931547619047619) 14%, rgba(255,255,255,1) 78%);
+}
+
+.connectedAs{
+    position : fixed;
+    bottom: 0px;
+    right: 0px;
+    left:0px;
+    width: 100%;
+}
+
+.header-top{
+    width: 100%;
+    right: 0px;
+    left:0px;
 }
 
 .logo{
@@ -97,16 +110,6 @@ h1{
 /*END btn submit myself*/
 
 /*START TEST button neon*/
-/*body {*/
-/*    margin: 0;*/
-/*    padding: 0;*/
-/*    display: flex;*/
-/*    justify-content: center;*/
-/*    align-items: center;*/
-/*    min-height: 100vh;*/
-/*    background: #031321;*/
-/*    font-family: consolas;*/
-/*}*/
 
 .btn-search{
     background-color: #fff;
@@ -117,19 +120,14 @@ h1{
 
 button.btn.btn-search:hover
 {
-    /*color: rgb(239, 192, 203);*/
-    /*color: #52006A;*/
-
     background-color: #fff;
     box-shadow: 0 0 10px #52006A, 0 0 40px #52006A, 0 0 80px #52006A;
-    /*border-radius: 3px;*/
 }
 
 #neon {
     position: relative;
     display: inline-block;
     padding: 15px 30px;
-    /*color: #CD113B;*/
     color: #52006A;
     text-transform: uppercase;
     letter-spacing: 4px;
@@ -139,7 +137,6 @@ button.btn.btn-search:hover
     transition: 0.2s;
     background-color: #fff;
     border: none;
-    /*width: 70%;*/
 }
 
 
@@ -147,20 +144,15 @@ button.btn.btn-search:hover
 
 #neon:hover
 {
-    /*color: rgb(239, 192, 203);*/
-    /*color: #52006A;*/
     color: #CD113B;
-
     background: #fff;
     box-shadow: 0 0 10px #CD113B, 0 0 40px #CD113B, 0 0 80px #CD113B;
-    /*border-radius: 3px;*/
     transition-delay: 1s;
 }
 
 #neon:hover
 {
     border-radius: 3px;
-    /*color: #CD113B;*/
     transition-delay: 1.3s;
 }
 
@@ -169,8 +161,6 @@ button.btn.btn-search:hover
     position: absolute;
     display: block;
 }
-
-
 
 
 #neon span:nth-child(1)
@@ -183,13 +173,11 @@ button.btn.btn-search:hover
 }
 
 
-
 #neon:hover span:nth-child(1)
 {
     left: 100%;
     transition: 1s;
 }
-
 
 #neon span:nth-child(3)
 {
