--- a/templates/partner/partner_detail.html.twig
+++ b/templates/partner/partner_detail.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-    <div class=" row ">
+    {{ include('partial/_responsiveFirstRow.html.twig') }}
         {# menuCommun is the left col in display #}
         {{ include('partial/_menuCommun.html.twig') }}
 
@@ -152,7 +152,7 @@
                                     <a href="{{path('app_structure_detail', {'id': structure.id})}}" class="btn btn-info m-md-2 btn-consult"><i class="bi bi-eye"></i>/<i class="bi bi-pen"></i></a><br>
                                 </td>
                                 <td>
-                                    <a href="{{path('app_structure_delete', {'id': structure.id})}}" class="btn btn-danger m-md-2 "><i class="bi bi-trash3"></i></a><br>
+                                    <a href="{{path('app_structure_delete', {'id': structure.id})}}" class="btn btn-danger m-md-2 btn-delete"><i class="bi bi-trash3"></i></a><br>
                                 </td>
                             {% endif %}
                         </tr>
@@ -167,6 +167,9 @@
             {{ include('partial/_return_to_annuaire.html.twig') }}
             {#-----------------------------#}
 
+            {#---------modal-------------#}
+            {{ include('partial/_deleteConfirmModal.html.twig') }}
+            {#-----------------------------#}
 
         </div>
     </div>
