--- a/templates/mail/welcome.html.twig
+++ b/templates/mail/welcome.html.twig
@@ -13,11 +13,11 @@
 <img src="{{ absolute_url(asset('ressource/Booty Booster_logo.png')) }}" alt="booty logo">
     <h1>Félicitations</h1>
     <p>Vous avez été enregistré en tant qu'utilisateur de BootyBooster.</p>
-    <p>Vous recevrez bientot un lien pour consulter vos informations en fonction de votre statut, partenaire et/ou structure</p>
-    <p> Vous pouvez d'ors et déjà utiliser le lien ci-dessous pour vous connecter avec les identifiants et mots de passe reçus par voie postale</p>
-    <a href="{{ url('app_login') }}"> SE CONNECTER </a>
+    <p>La création complète de votre compte utilisateur est en cours.</p>
+    <p>Vous recevrez bientot un lien pour vous connecter à l'annuaire des partenaires et structures de Booty Booster grâce aux identifiant et mots de passe que votre conseiller franchiseur vous a communiqués au téléphone</p>
+{#    <a href="{{ url('app_login') }}"> SE CONNECTER </a>#}
 {#    <img src="{{ absolute_url((asset('ressource/muscle_booty_background.png')))}}" alt="booty">#}
-    <img class="small-img" src="{{ email.image('@images/muscle_booty_background.png') }}" class="logo" alt="Booty Logo">
+{#    <img class="small-img" src="{{ email.image('@images/muscle_booty_background.png') }}" class="logo" alt="Booty Logo">#}
 </body>
 </html>
 
