--- a/templates/partial/_menuCommun.html.twig
+++ b/templates/partial/_menuCommun.html.twig
@@ -5,7 +5,7 @@
         <div class="accordion-item">
             <h2 class="accordion-header " id="headingZero">
                 <button class="accordion-button collapsed " type="button" data-bs-toggle="collapse" data-bs-target="#collapseZero" aria-expanded="false" aria-controls="collapseZero">
-                    Connexion
+                    Utilisateurs
                 </button>
             </h2>
             <div id="collapseZero" class="accordion-collapse collapse " aria-labelledby="headingZero" data-bs-parent="#accordionExample">
