--- a/templates/partner/partner_home.html.twig
+++ b/templates/partner/partner_home.html.twig
@@ -23,7 +23,7 @@
                         <th scope="col">Nom</th>
                         {% if app.user and is_granted('ROLE_FRANCHISE')  %}
                         <th scope="col">Statut</th>
-                        <th scope="col">Edition</th>
+                        <th scope="col">Supprimer</th>
                         {% endif %}
                         <th scope="col">Description</th>
                         <th scope="col">Structures</th>
