--- a/templates/partner/partner_detail.html.twig
+++ b/templates/partner/partner_detail.html.twig
@@ -144,7 +144,7 @@
 
                                 <td>
                                     <div class="form-check form-switch">
-                                        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" {{ (structure.isActive) ? 'checked' : '' }} data-id="{{ structure.id }}">
+                                        <input class="form-check-input structure-switch" type="checkbox" role="switch" id="flexSwitchCheckDefault" {{ (structure.isActive) ? 'checked' : '' }} data-id="{{ structure.id }}">
 {#                                        <label></label>#}
                                     </div>
                                 </td>
