--- a/templates/partner/partner_home.html.twig
+++ b/templates/partner/partner_home.html.twig
@@ -16,19 +16,6 @@
                 <h1>Annuaire des partenaires de Booty Booster</h1>
             </div>
 
-            {#---------Filtre actif/désactivé/all--------------------#}
-
-            <div class="row text-center">
-                <div class="btn-group" role="group" aria-label="View filters">
-                    <button type="button" id="active-partner-only" class="btn my-btn">Actifs</button>
-                    <button type="button" id="all-partner" class="btn my-btn">Tous</button>
-                    <button type="button" id="inactive-partner-only" class="btn my-btn">Désactivés</button>
-                    <button type="button" id="no-partner" class="btn my-btn">Aucun</button>
-                </div>
-            </div>
-            {#-----------------------------#}
-
-
 
             {#-----------------------------#}
             <div class="row">
@@ -49,7 +36,7 @@
                     <tbody class="table-group-divider">
                     {% for partner in partners %}
 
-                        <tr class="partner-filter">
+                        <tr>
                             <th scope="row">
                                 {{ partner.name }}<br>
                                 {% if app.user and is_granted('ROLE_FRANCHISE')  %}
@@ -59,7 +46,7 @@
                             {% if app.user and is_granted('ROLE_FRANCHISE')  %}
                                 <td>
                                     <div class="form-check form-switch">
-                                        <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" {{ (partner.isActive) ? 'checked' : '' }} data-id="{{ partner.id }}">
+                                        <input class="form-check-input partner-switch" type="checkbox" role="switch" id="flexSwitchCheckDefault" {{ (partner.isActive) ? 'checked' : '' }} data-id="{{ partner.id }}">
                                         {# <label class="form-check-label" for="flexSwitchCheckDefault">Activer / Désactiver </label>#}
                                     </div>
                                 </td>
@@ -92,13 +79,9 @@
                 </table>
             </div>
 
-
-
-
-
             {#-----------------------------#}
         </div>
-    </div>
+
 
     {{ include('partial/_deleteConfirmModal.html.twig') }}
 
