--- a/templates/structure/structure_detail.html.twig
+++ b/templates/structure/structure_detail.html.twig
@@ -46,7 +46,7 @@
                         </th>
                         <th>
                             <div class="form-check form-switch">
-                                <input class="form-check-input structure-switch" type="checkbox" role="switch" id="SwitchStructureDetail" {{ (structure.isActive) ? 'checked' : '' }} data-id="{{ structure.id }}">
+                                <input class="form-check-input structure-switch" type="checkbox" role="switch" id="" {{ (structure.isActive) ? 'checked' : '' }} data-id="{{ structure.id }}">
                                 {#<label class="form-check-label" for="SwitchPartnerDetail">Désactivé / Actif </label>#}
                             </div>
                         </th>
