--- a/templates/partner/partner_detail.html.twig
+++ b/templates/partner/partner_detail.html.twig
@@ -49,7 +49,7 @@
                             </th>
                             <th>
                                 <div class="form-check form-switch">
-                                        <input class="form-check-input" type="checkbox" role="switch" id="SwitchPartnerDetail" {{ (partner.isActive) ? 'checked' : '' }} data-id="{{ partner.id }}">
+                                        <input class="form-check-input partner-switch" type="checkbox" role="switch" id="" {{ (partner.isActive) ? 'checked' : '' }} data-id="{{ partner.id }}">
                                         {#<label class="form-check-label" for="SwitchPartnerDetail">Désactivé / Actif </label>#}
                                 </div>
                             </th>
@@ -144,7 +144,7 @@
 
                                 <td>
                                     <div class="form-check form-switch">
-                                        <input class="form-check-input structure-switch" type="checkbox" role="switch" id="flexSwitchCheckDefault" {{ (structure.isActive) ? 'checked' : '' }} data-id="{{ structure.id }}">
+                                        <input class="form-check-input structure-switch" type="checkbox" role="switch" id="" {{ (structure.isActive) ? 'checked' : '' }} data-id="{{ structure.id }}">
 {#                                        <label></label>#}
                                     </div>
                                 </td>
