correct return buttons clickable area

--- a/templates/partial/_return_to_annuaire.html.twig
+++ b/templates/partial/_return_to_annuaire.html.twig
@@ -1,5 +1,5 @@
-<div class="row m-2 p-1">
+<div class=" m-2 p-1">
     <a href="{{ path('app_partner_home') }}">
-        <bouton class="my-btn " >Retour à l'annuaire</bouton>
+        <button class="my-btn " >Retour à l'annuaire</button>
     </a>
 </div>
