--- a/templates/partial/_return_to_partner.html.twig
+++ b/templates/partial/_return_to_partner.html.twig
@@ -1,5 +1,5 @@
-<div class="row m-2 p-1">
+<div class="m-2 p-1">
     <a href="{{ path('app_partner_detail', {'id' : partner.id})  }}">
-        <bouton class="my-btn">Retour au tableau de bord de {{ partner }}</bouton>
+        <button class="my-btn">Retour au tableau de bord de {{ partner }}</button>
     </a>
 </div>
