--- a/templates/partial/_return_to_structure.html.twig
+++ b/templates/partial/_return_to_structure.html.twig
@@ -1,5 +1,5 @@
-<div class="row m-2 p-1">
+<div class="m-2 p-1">
     <a href="{{ path('app_structure_detail', {'id' : structure.id})  }}">
-        <bouton class="my-btn">Retour au tableau de bord de {{ structure }}</bouton>
+        <button class="my-btn">Retour au tableau de bord de {{ structure }}</button>
     </a>
 </div>
