fixed responsive bug in small screen : table scrollable + footer and nav width

--- a/templates/partial/_connectedAs.html.twig
+++ b/templates/partial/_connectedAs.html.twig
@@ -2,13 +2,13 @@
 {#    <div class="row text-center bg-pink-reverse sticky-bottom ">#}
 
     {# short sentence for device xs sm #}
-    <div class="row text-center bg-pink-reverse connectedAs d-block d-md-none ">
+    <footer class="row text-center bg-pink-reverse connectedAs d-block d-md-none ">
         <p>(connecté) {{ app.user.email }}</p>
-    </div>
+    </footer>
 
     {# Longer sentence for larger device md lg xl xxl #}
-    <div class="row text-center bg-pink-reverse connectedAs d-none d-md-block ">
+    <footer class="row text-center bg-pink-reverse connectedAs d-none d-md-block ">
         <p>Vous êtes connecté en tant que {{ app.user.email }}</p>
-    </div>
+    </footer>
 
 {% endif %}
