--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,7 +20,6 @@
 body{
     font-family: 'Fredoka', sans-serif;
     /*font-family: 'Fredoka One', cursive;*/
-
 }
 
 h1{
@@ -42,6 +41,7 @@ h1{
     right: 0px;
     left:0px;
     width: 100%;
+    margin: 0px;
 }
 
 .header-top{
