trials on search function

--- a/templates/partial/_partnerSearcherAjax.html.twig
+++ b/templates/partial/_partnerSearcherAjax.html.twig
@@ -18,13 +18,18 @@
                         url: '{{ path('app_partner_searcher') }}',
                         data: {userSearchText: userSearchText},
                         success: function (data){
+                            console.log("début fonction success");
+
                             $('.search-result').remove();
                             if (data !== "")
                             {
+                                console.log('enter the if résultat non vide');
                                 for (let i = 0; i < data.length; i++) {
                                     let current = JSON.parse(data[i]);
                                     let url = `/partner/detail/${current['id']}`
                                     $('#search-partner-result').append(`<a class="search-result list-group-item list-group-item-action" href="${url}">${current['name']}</a>`);
+                                    console.log("inside the loop de résultats");
+
                                 }
                             }
                         }
@@ -35,15 +40,22 @@
         })
 
         //Focus on search field while modal pop up
-        $("#exampleModal").on("shown.bs.modal", function(){
+        $("#exampleModal")
+            .on("shown.bs.modal", function(){
             $(this).find("input").first().focus();
         })
-
         // Clean old results and input field when closed
-        $("#exampleModal").on("hidden.bs.modal", function(){
-            $('#search-partner').val('');
-            $('.search-result').remove();
-        })
+                .on("hidden.bs.modal", function(){
+                $('#search-partner').val('');
+                $('.search-result').remove();
+            })
+
+        // BEFORE FACTORIZATION
+        // Clean old results and input field when closed
+        // $("#exampleModal").on("hidden.bs.modal", function(){
+        //     $('#search-partner').val('');
+        //     $('.search-result').remove();
+        // })
 
         // Code à essayer de la doc bootstrap pour le focus
         // $('#myModal').on('shown.bs.modal', function () {
