search function debug 2

--- a/templates/partial/_partnerSearcherAjax.html.twig
+++ b/templates/partial/_partnerSearcherAjax.html.twig
@@ -36,7 +36,7 @@
 
                                     console.log("----------");
 
-                                    let current = JSON.parse(data[i]);
+                                    // let current = JSON.parse(data[i]);
 
                                     console.log("---JSON.parse(data[i])---");
                                     console.log(JSON.parse(data[i]));
@@ -46,10 +46,10 @@
                                     console.log(current.name);
 
 
-                                    let url = `/partner/detail/${current['id']}`;
-                                    console.log(url);
-                                    $('#search-partner-result').append(`<a class="search-result list-group-item list-group-item-action" href="${url}">${current['name']}</a>`);
-                                    console.log("inside the loop de résultats");
+                                    // let url = `/partner/detail/${current['id']}`;
+                                    // console.log(url);
+                                    // $('#search-partner-result').append(`<a class="search-result list-group-item list-group-item-action" href="${url}">${current['name']}</a>`);
+                                    // console.log("inside the loop de résultats");
 
                                 }
                             }
